[project]
name = "fastapi_sqlalchemy"
version = "0.1.0"
description = ""
authors = [
    {name = "m-shrief",email = "m.shrief.dev@proton.me"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.115.7,<0.116.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "psycopg[binary] (>=3.2.4,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
